2009-01-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_send_rtp_sink),
	(gst_rtp_session_getcaps_send_rtp):
	* gst/rtpmanager/rtpsession.c: (check_collision),
	(rtp_session_schedule_bye_locked), (rtp_session_schedule_bye):
	* gst/rtpmanager/rtpsession.h:
	Rename a method to better reflect what it really does.

2009-01-02  Alessandro Decina  <alessandro.d@gmail.com>

	* ext/apexsink/Makefile.am:
	Move -lgcrypto from _LDFLAGS to _LIBADD.

2009-01-02  Alessandro Decina  <alessandro.d@gmail.com>

	* ext/apexsink/Makefile.am:
	Link against -lgcrpyto for RSA_new and RSA_free.
	* ext/faac/gstfaac.c:
	* ext/x264/gstx264enc.c:
	Fix compiler warnings.

2009-01-02  Alessandro Decina  <alessandro.d@gmail.com>

	* gst/mpegdemux/gstmpegdemux.c:
	Initialize scr_rate_n and scr_rate_d in order to fix compiler warnings.

2008-12-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c: (mxf_bwf_handle_essence_element),
	(mxf_aes3_handle_essence_element):
	* gst/mxf/mxfalaw.c: (mxf_alaw_handle_essence_element):
	* gst/mxf/mxfd10.c: (mxf_d10_picture_handle_essence_element),
	(mxf_d10_sound_handle_essence_element):
	* gst/mxf/mxfdemux.c: (gst_mxf_demux_pad_init),
	(gst_mxf_demux_choose_package),
	(gst_mxf_demux_handle_header_metadata_update_streams),
	(gst_mxf_demux_pad_next_component),
	(gst_mxf_demux_handle_generic_container_essence_element),
	(gst_mxf_demux_parse_footer_metadata),
	(gst_mxf_demux_handle_klv_packet), (gst_mxf_demux_src_query):
	* gst/mxf/mxfdv-dif.c: (mxf_dv_dif_handle_essence_element):
	* gst/mxf/mxfjpeg2000.c: (mxf_jpeg2000_handle_essence_element):
	* gst/mxf/mxfmetadata.c: (mxf_metadata_sequence_init),
	(mxf_metadata_structural_component_init),
	(mxf_metadata_generic_picture_essence_descriptor_init):
	* gst/mxf/mxfmpeg.c: (mxf_mpeg_video_handle_essence_element),
	(mxf_mpeg_audio_handle_essence_element):
	* gst/mxf/mxfparse.h:
	* gst/mxf/mxfup.c: (mxf_up_handle_essence_element):